# healthcare-ai-decision-support

./: .gitignore  README.md  app.py  ingest.py  pyproject.toml
backend/: alerts.py  api.py  database.py
src/medical_analysis/: crew.py  main.py
src/medical_analysis/config/: agents.yaml  tasks.yaml
src/medical_analysis/tools/: custom_tool.py
