[project]
name = "medical_analysis"
version = "0.1.0"
description = "medical_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3",
    "litellm>=1.0.0",
    "apscheduler>=3.10.0",
    "pydantic[email]>=2.0.0",
    "fastapi-sso>=0.10.0",
    "ollama>=0.1.0",
    "chromadb>=0.4.0",
    "pymupdf>=1.23.0",
    "sentence-transformers>=2.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-community>=0.0.1",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sqlalchemy>=2.0.0",
    "streamlit>=1.35.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "tiktoken>=0.7.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.scripts]
medical_analysis = "medical_analysis.main:run"
run_crew = "medical_analysis.main:run"
train = "medical_analysis.main:train"
replay = "medical_analysis.main:replay"
test = "medical_analysis.main:test"
run_with_trigger = "medical_analysis.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"